Add slack notification to github actions workflow

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -39,6 +39,13 @@ jobs:
             -configuration Debug
             -scheme Swift-github-actions
             build
+    # Notify to slack when build failed
+    - name: Slack build failure notification
+      if: failure()
+      run: |
+        curl -X POST --data-urlencode 'payload={
+          "text": ":fire::fire::fire:${{github.repository}}: Build failed..:fire::fire::fire:"
+        }' ${{secrets.SLACK_WEBHOOK_URL}}
     # Run unit test
     - name: Run tests
       run: xcodebuild
@@ -46,3 +53,17 @@ jobs:
             -sdk iphonesimulator
             -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max'
             clean test
+    # Notify to slack when test failed
+    - name: Slack test failure notification
+      if: failure()
+      run: |
+        curl -X POST --data-urlencode 'payload={
+          "text": ":fire::fire::fire:${{github.repository}}: Test failed..:fire::fire::fire:"
+        }' ${{secrets.SLACK_WEBHOOK_URL}}
+    # Notify to slack when build and test succeeded
+    - name: Slack success notification
+      if: success()
+      run: |
+        curl -X POST --data-urlencode 'payload={
+          "text": ":tada::tada::tada:${{github.repository}}: Build and Test succeeded！:tada::tada::tada:"
+        }' ${{secrets.SLACK_WEBHOOK_URL}}
